--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "3.0.0-rc.12"
   },
   "dependencies": {
-    "@nuxtjs/i18n": "^7.3.0"
+    "@nuxtjs/i18n": "^8.0.0-beta.3",
+    "bootstrap": "^5.2.2"
   }
 }
